--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,43 +1,45 @@
 body{
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
+    width: 100%;
+    height: 100%;
 }
 
-#titulo-principal{
-    font-size: 36px;
-    font-weight: bold;
-    color: #1d868a;
-    text-align: center;
+main{
+    margin: 0 auto;
+    width: 1200px;
+    position: relative;
 }
 
-.form-section{
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
+.menu-principal{
+    width: 100%;
+    background-color: #252323;
+    height: 60px;
 }
 
-.input-filed{
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 10px;
-    margin-bottom: 10px;
-    width: calc(100% - 20px);
-    box-sizing: border-box;
+.logo{
+    padding: 8px;
+    float: left;
+    width: 40%;
 }
 
-.btn{
+.logo img{
+    width: 30%;
+    height: auto;
+}
+
+.redes-sociais ul li{
+    margin-right: 2px;
     display: inline-block;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
+    float: left;
+    list-style: none;
+    }
+
+.redes-sociais{
+    margin: 0;
+    width: 50%;
+    float: right;
 }
 
-.btn:hover{
-    background-color: #0056b3;
+.redes-sociais img{
+    width: 20%;
+    height: auto; 
 }
