--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,11 @@
 body{
     width: 100%;
     height: 100%;
+    margin: 0 auto;
+}
+
+ul{
+    padding: 0px!important;
 }
 
 main{
@@ -9,37 +14,101 @@ main{
     position: relative;
 }
 
+.coluna100porcento{
+    width: 100%;
+    float: left;
+    position: relative;
+}
+
 .menu-principal{
     width: 100%;
-    background-color: #252323;
-    height: 60px;
+    background-color: #7a7a7a;
+    height: 70px;
 }
 
 .logo{
-    padding: 8px;
+    padding: 10px;
     float: left;
-    width: 40%;
+    width: 70%;
 }
 
 .logo img{
-    width: 30%;
-    height: auto;
+    right: 50px;
+    height: 50px;
 }
 
 .redes-sociais ul li{
-    margin-right: 2px;
+    padding: 5px;
+    margin-left: 15px;
     display: inline-block;
     float: left;
     list-style: none;
-    }
+}
+
+.redes-sociais li img{
+    right: 30px;
+    height: 30px;
+}
 
 .redes-sociais{
-    margin: 0;
-    width: 50%;
+    width: 25%;
     float: right;
 }
 
-.redes-sociais img{
-    width: 20%;
-    height: auto; 
+.header-two{
+    background-color: #ffffff;
+    width: 1200px;
+    margin: 0 auto;
+    padding: 5px;
+}
+
+.menu-urls{
+    height: 60px;
+    border-bottom: 5px solid #efefef;
+}
+
+.menu ul li{
+    display: inline-block;
+    color: #8b8b8b;
+    margin-left: 15px;
+    height: 40px;
+}
+
+.menu ul li:hover{
+    border-bottom: 3px solid #00bac6;
+}
+
+.menu ul li a:hover{
+    color: #00bac6;
+}
+
+.menu ul li a{
+    color: #8b8b8b;
+    text-decoration: none;
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
+.menu{
+    width: 70%;
+    float: left;
+}
+
+.busca{
+    text-align: center;
+    width: 30%;
+    float: right;
+}
+
+.busca input{
+    background-image: url("../image/lupa.png");
+    background-repeat: no-repeat;
+    background-position: 95%;
+    background-size: 10%;
+    border: 2px solid #d6d6d6;
+    padding: 2px;
+    width: 190px;
+    height: 22px;
+    margin-top: 10px;
+    margin-right: 15px;
 }
