--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,109 +1,113 @@
-body{
+body {
     width: 100%;
     height: 100%;
     margin: 0 auto;
 }
 
-ul{
-    padding: 0px!important;
+ul {
+    padding: 0px !important;
 }
 
-main{
+main {
     margin: 0 auto;
     width: 1200px;
     position: relative;
 }
 
-.coluna-100{
+.coluna-100 {
     width: 100%;
     float: left;
     position: relative;
 }
 
-.menu-principal{
+.menu-principal {
     width: 100%;
     background-color: #7a7a7a;
     height: 70px;
 }
 
-.logo{
+.logo {
     padding: 10px;
     float: left;
     width: 70%;
 }
 
-.logo img{
+.logo img {
     right: 50px;
     height: 50px;
 }
 
-.redes-sociais ul li{
+.redes-sociais ul li {
     padding: 5px;
-    margin-left: 15px;
+    margin-left: 12px;
     display: inline-block;
     float: left;
     list-style: none;
 }
 
-.redes-sociais li img{
+.redes-sociais ul {
+    margin-left: 100px;
+}
+
+.redes-sociais li img {
     right: 30px;
     height: 30px;
 }
 
-.redes-sociais{
+.redes-sociais {
     width: 25%;
     float: right;
 }
 
-.header-two{
+.header-two {
     background-color: #ffffff;
     width: 1200px;
     margin: 0 auto;
     padding: 5px;
 }
 
-.menu-urls{
+.menu-urls {
     height: 60px;
     border-bottom: 5px solid #efefef;
 }
 
-.menu ul li{
+.menu ul li {
     display: inline-block;
     color: #8b8b8b;
     margin-left: 15px;
     height: 40px;
 }
 
-.menu ul li:hover{
+.menu ul li:hover {
     border-bottom: 3px solid #00bac6;
 }
 
-.menu ul li a:hover{
+.menu ul li a:hover {
     color: #00bac6;
 }
 
-.menu ul li a{
+.menu ul li a {
     color: #8b8b8b;
     text-decoration: none;
     font-size: 16px;
     text-transform: uppercase;
 }
 
-.menu{
+.menu {
     width: 70%;
     float: left;
 }
 
-.busca{
+.busca {
     text-align: center;
     width: 30%;
     float: right;
 }
 
-.busca input{
+.busca input {
     background-image: url("../image/lupa.png");
     background-repeat: no-repeat;
-    background-position: 95%;
+    background-position: 97%;
     background-size: 10%;
     border: 2px solid #d6d6d6;
     padding: 2px;
@@ -113,51 +117,103 @@ main{
     margin-right: 15px;
 }
 
-.slider-principal img{
+.slider-principal img {
     background-size: 10%;
 }
 
-.coluna-100-2{
+.slider-principal {
     width: 15%;
     float: right;
-    margin-right: 170px;
+    margin-right: 80px;
     position: relative;
+    top: 10px;
 }
 
-button.slick-prev{
+button.slick-prev {
     font-size: 0px;
     border: none;
     width: 30px;
-    height: 60px;
+    height: 50px;
     background-color: transparent;
     background-image: url("../image/seta-esquerda.png");
     background-size: 80%;
+    background-position: left;
     background-repeat: no-repeat;
     z-index: 9;
     position: absolute;
-    top: 25%;
+    top: 35%;
     left: 0;
 }
 
-button.slick-prev:hover{
+button.slick-prev:hover {
     cursor: pointer;
 }
 
-button.slick-next{
+button.slick-next {
     font-size: 0px;
     border: none;
     width: 30px;
-    height: 60px;
+    height: 50px;
     background-color: transparent;
     background-image: url("../image/seta-direita.png");
     background-size: 80%;
+    background-position: right;
     background-repeat: no-repeat;
     z-index: 9;
     position: absolute;
-    top: 25%;
+    top: 35%;
     right: 0;
 }
 
-button.slick-next:hover{
+button.slick-next:hover {
     cursor: pointer;
+}
+
+.slick-initialized {
+    overflow: hidden;
+}
+
+.slick-dots li button {
+    font-size: 0px;
+    border: 2px solid #8b8b8b;
+    border-radius: 50%;
+    width: 15px;
+    height: 16px;
+    background: transparent;
+    cursor: pointer;
+}
+
+.slick-dots {
+    margin: 0 auto;
+    width: 50%;
+    position: absolute;
+    left: 30%;
+    top: 85%;
+}
+
+.slick-dots li {
+    display: inline-block;
+    padding-left: 10px;
+}
+
+li.slick-active button {
+    background: #00bac6;
+}
+
+.texto {
+    width: 50%;
+    float: left;
+    margin-left: 280px;
+    position: relative;
+    top: 10px;
+}
+
+.edição-texto h1 {
+    text-align: center;
+    font-size: 25px;
+}
+
+.edição-texto p {
+    text-align: justify;
+    font-size: 20px;
 }
