--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,7 +74,7 @@ main {
 .menu ul li {
     display: inline-block;
     color: #8b8b8b;
-    margin-left: 15px;
+    margin-left: 20px;
     height: 40px;
 }
 
@@ -99,7 +99,7 @@ main {
 }
 
 .busca {
-    text-align: center;
+    text-align: right;
     width: 30%;
     float: right;
 }
@@ -107,14 +107,52 @@ main {
 .busca input {
     background-image: url("../image/lupa.png");
     background-repeat: no-repeat;
-    background-position: 97%;
-    background-size: 10%;
+    background-position: 96%;
+    background-size: 6%;
+    border-radius: 50px;
     border: 2px solid #d6d6d6;
     padding: 2px;
-    width: 190px;
-    height: 22px;
-    margin-top: 10px;
-    margin-right: 15px;
+    padding-left: 12px;
+    width: 300px;
+    height: 25px;
+    margin-top: 8px;
+    margin-right: 10px;
+}
+
+.lista-assuntos {
+    width: 20%;
+    float: left;
+    margin-left: 40px;
+    top: 10px;
+}
+
+.lista-assuntos ul li {
+    list-style: none;
+}
+
+.texto {
+    width: 50%;
+    float: left;
+    text-align: center;
+    margin-left: 10px;
+    position: relative;
+    top: 10px;
+}
+
+.edição-texto h1 {
+    text-align: center;
+    font-size: 25px;
+}
+
+.edição-texto p {
+    text-align: justify;
+    font-size: 20px;
+}
+
+.edição-texto img {
+    width: 80%;
+    height: auto;
+    text-align: center;
 }
 
 .slider-principal img {
@@ -198,22 +236,4 @@ button.slick-next:hover {
 
 li.slick-active button {
     background: #00bac6;
-}
-
-.texto {
-    width: 50%;
-    float: left;
-    margin-left: 280px;
-    position: relative;
-    top: 10px;
-}
-
-.edição-texto h1 {
-    text-align: center;
-    font-size: 25px;
-}
-
-.edição-texto p {
-    text-align: justify;
-    font-size: 20px;
 }
