--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,10 @@ main {
 }
 
 .menu-principal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
     width: 100%;
     background-color: #7a7a7a;
     height: 70px;
@@ -67,8 +71,13 @@ main {
 }
 
 .menu-urls {
+    position: fixed;
+    top: 70px;
+    left: 0;
+    z-index: 100;
     height: 60px;
     border-bottom: 5px solid #efefef;
+    background-color: #ffffff;
 }
 
 .menu ul li {
@@ -117,6 +126,11 @@ main {
     height: 25px;
     margin-top: 8px;
     margin-right: 10px;
+}
+
+.page {
+    top: 150px;
+    left: 0;
 }
 
 .lista-assuntos {
